--- a/SohaSDK-master/build.gradle
+++ b/SohaSDK-master/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.google.android.gms:play-services:8.1.0'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 }
