--- a/SohaSDK-master/build.gradle
+++ b/SohaSDK-master/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.google.android.gms:play-services:8.1.0'
     compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'io.socket:socket.io-client:0.6.2'
 }
